# higurashi-web

./: alembic.ini  hello.py  pyproject.toml  settings.toml
alembic/: env.py  script.py.mako
alembic/versions/: 676c12c745d5_init.py
src/: __init__.py  db.py  depends.py  main.py  settings.py
src/routers/: __init__.py  index.py
src/routers/user/: models.py
src/templates/: base.jinja  index.jinja
